--- a/manager/frontend/src/i18n/pt_br.json
+++ b/manager/frontend/src/i18n/pt_br.json
@@ -69,7 +69,17 @@
     "restart": "Reiniciar",
     "createBackup": "Criar Backup",
     "recentActivity": "Atividade Recente",
-    "noActivity": "Nenhuma atividade"
+    "noActivity": "Nenhuma atividade",
+    "authRequired": "Autenticação do Servidor Necessária",
+    "authRequiredDesc": "Seu servidor requer autenticação para acessar recursos online",
+    "authenticateNow": "Autenticar Agora",
+    "authExpired": "Autenticação Expirada",
+    "authExpiredDesc": "A autenticação do seu servidor expirou. Por favor, autentique novamente para continuar usando recursos online.",
+    "authMemoryOnly": "Autenticação Não Persistente",
+    "authMemoryOnlyDesc": "Seu servidor está autenticado mas o token está armazenado apenas na memória. Você precisará autenticar novamente após cada reinicialização do servidor.",
+    "authMemoryOnlyShort": "Apenas Memória (Não Persistente)",
+    "enablePersistence": "Habilitar Persistência",
+    "enablingPersistence": "Habilitando..."
   },
   "console": {
     "title": "Console do Servidor",
@@ -303,7 +313,24 @@
     "noConfigFiles": "Nenhum arquivo de configuração encontrado",
     "unsavedChanges": "Alterações não salvas",
     "configSaved": "Configuração salva",
-    "configWarning": "Aviso: Configuração inválida pode quebrar o servidor. Uma reinicialização do servidor é necessária após salvar."
+    "configWarning": "Aviso: Configuração inválida pode quebrar o servidor. Uma reinicialização do servidor é necessária após salvar.",
+    "hytaleAuth": "Autenticação do Servidor Hytale",
+    "hytaleAuthDesc": "Autentique seu servidor com Hytale para acessar recursos online",
+    "authStatus": "Status de Autenticação",
+    "authenticated": "Autenticado",
+    "notAuthenticated": "Não Autenticado",
+    "initiateAuth": "Autenticar Servidor",
+    "checkingAuth": "Verificando autenticação...",
+    "authInProgress": "Autenticação em Andamento",
+    "completeAuth": "Complete a autenticação no seu navegador",
+    "verifyAuth": "Verificar Autenticação",
+    "resetAuth": "Resetar Autenticação",
+    "authSuccess": "Servidor autenticado com sucesso!",
+    "authPending": "Aguardando conclusão da autenticação...",
+    "authExpired": "Código de autenticação expirado. Por favor, tente novamente.",
+    "openAuthUrl": "Abrir Página de Autenticação",
+    "authCode": "Código de Autenticação",
+    "copyCode": "Copiar Código"
   },
   "users": {
     "title": "Gerenciamento de Usuários",
