--- a/manager/frontend/src/i18n/de.json
+++ b/manager/frontend/src/i18n/de.json
@@ -1,4 +1,13 @@
 {
+  "demo": {
+    "banner": "DEMO-MODUS",
+    "description": "Alle Daten sind simuliert. Kein echter Server verbunden.",
+    "modeActive": "Demo-Modus aktiv",
+    "selectAccount": "Wähle einen Account zum Testen:",
+    "viewerLogin": "Als Benutzer anmelden",
+    "adminLogin": "Als Administrator anmelden",
+    "noRealData": "Alle Daten sind simuliert. Keine echten Änderungen möglich."
+  },
   "common": {
     "loading": "Laden...",
     "save": "Speichern",
