--- a/manager/frontend/src/i18n/pt_br.json
+++ b/manager/frontend/src/i18n/pt_br.json
@@ -1,4 +1,13 @@
 {
+  "demo": {
+    "banner": "MODO DEMO",
+    "description": "Todos os dados sao simulados. Nenhum servidor real conectado.",
+    "modeActive": "Modo Demo Ativo",
+    "selectAccount": "Selecione uma conta para testar:",
+    "viewerLogin": "Entrar como Visualizador",
+    "adminLogin": "Entrar como Administrador",
+    "noRealData": "Todos os dados sao simulados. Nenhuma alteracao real possivel."
+  },
   "common": {
     "loading": "Carregando...",
     "save": "Salvar",
